# gastro-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.txt  manage.py  pyproject.toml
gastro/: asgi.py  settings.py  urls.py  wsgi.py
src/: Dockerfile
src/config/: settings.py  urls.py
src/orders/: admin.py  models.py
src/orders/migrations/: 0001_initial.py
src/users/: admin.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_options_alter_user_email_alter_user_phone_and_more.py
