[tool.poetry]
name = "gastro-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gastro_api"}]

[tool.poetry.dependencies]
python = "3.9.7"
django = "^4.1.5"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
requests = "^2.28.2"
markdown = "^3.4.1"
django-filter = "^22.1"
phonenumbers = "^8.13.4"
django-phonenumber-field = "^7.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
